--- a/src/app/pages/register/register.component.html
+++ b/src/app/pages/register/register.component.html
@@ -1,73 +1,71 @@
-<form nz-form>
-    <nz-form-item>
-        <nz-form-label [nzSm]="6" [nzXs]="24" nzRequired nzFor="email">E-mail</nz-form-label>
-        <nz-form-control [nzSm]="14" [nzXs]="24" nzErrorTip="The input is not valid E-mail!">
-            <input nz-input formControlName="email" id="email" />
-        </nz-form-control>
-    </nz-form-item>
-    <nz-form-item>
-        <nz-form-label [nzSm]="6" [nzXs]="24" nzFor="password" nzRequired>Password</nz-form-label>
-        <nz-form-control [nzSm]="14" [nzXs]="24" nzErrorTip="Please input your password!">
-            <input nz-input type="password" id="password" formControlName="password" />
-        </nz-form-control>
-    </nz-form-item>
-    <nz-form-item>
-        <nz-form-label [nzSm]="6" [nzXs]="24" nzFor="checkPassword" nzRequired>Confirm Password</nz-form-label>
-        <nz-form-control [nzSm]="14" [nzXs]="24" [nzErrorTip]="errorTpl">
-            <input nz-input type="password" formControlName="checkPassword" id="checkPassword" />
-            <ng-template #errorTpl let-control>
-                @if (control.errors?.['required']) {
-                Please confirm your password!
-                }
-                @if (control.errors?.['confirm']) {
-                Two passwords that you enter is inconsistent!
-                }
-            </ng-template>
-        </nz-form-control>
-    </nz-form-item>
-    <nz-form-item>
-        <nz-form-label [nzSm]="6" [nzXs]="24" nzFor="nickname" nzRequired
-            nzTooltipTitle="What do you want other to call you">
-            <span>Nickname</span>
-        </nz-form-label>
-        <nz-form-control [nzSm]="14" [nzXs]="24" nzErrorTip="Please input your nickname!">
-            <input nz-input id="nickname" formControlName="nickname" />
-        </nz-form-control>
-    </nz-form-item>
-    <nz-form-item>
-        <nz-form-label [nzSm]="6" [nzXs]="24" nzFor="phoneNumber" nzRequired>Phone Number</nz-form-label>
-        <nz-form-control [nzSm]="14" [nzXs]="24" 
-            nzErrorTip="Please input your phone number!">
-            <nz-input-group [nzAddOnBefore]="addOnBeforeTemplate">
-                <ng-template #addOnBeforeTemplate>
-                    <nz-select formControlName="phoneNumberPrefix" class="phone-select">
-                        <nz-option nzLabel="+86" nzValue="+86"></nz-option>
-                        <nz-option nzLabel="+87" nzValue="+87"></nz-option>
-                    </nz-select>
-                </ng-template>
-                <input formControlName="phoneNumber" id="'phoneNumber'" nz-input />
-            </nz-input-group>
-        </nz-form-control>
-    </nz-form-item>
-    <nz-form-item>
-        <nz-form-label [nzSm]="6" [nzXs]="24" nzFor="website" nzRequired>Website</nz-form-label>
-        <nz-form-control [nzSm]="14" [nzXs]="24" nzErrorTip="Please input website!">
-            <input nz-input id="website" formControlName="website" placeholder="website" />
-        </nz-form-control>
-    </nz-form-item>
-    <nz-form-item nz-row class="register-area">
-        <nz-form-control [nzSpan]="14" [nzOffset]="6">
-            <label nz-checkbox formControlName="agree">
-                <span>
-                    I have read the
-                    <a>agreement</a>
-                </span>
-            </label>
-        </nz-form-control>
-    </nz-form-item>
-    <nz-form-item nz-row class="register-area">
-        <nz-form-control [nzSpan]="14" [nzOffset]="6">
-            <button nz-button nzType="primary">Register</button>
-        </nz-form-control>
-    </nz-form-item>
+<form nz-form [formGroup]="form"> 
+    <nz-form-item> 
+        <nz-form-label [nzSm]="6" [nzXs]="24" nzRequired nzFor="email">Correo</nz-form-label> 
+        <nz-form-control [nzSm]="14" [nzXs]="24" nzErrorTip="Ingrese su correo"> 
+            <input nz-input formControlName="email" id="email" /> 
+        </nz-form-control> 
+    </nz-form-item> 
+
+    <nz-form-item> 
+        <nz-form-label [nzSm]="6" [nzXs]="24" nzFor="password" nzRequired>Contraseña</nz-form-label> 
+        <nz-form-control [nzSm]="14" [nzXs]="24" nzErrorTip="Ingrese su contraseña"> 
+            <input (ngModelChange)="updateConfirmValidator()" nz-input type="password" id="password" formControlName="password" /> 
+        </nz-form-control> 
+    </nz-form-item> 
+
+    <nz-form-item> 
+        <nz-form-label [nzSm]="6" [nzXs]="24" nzFor="confirmPassword" nzRequired>Confirmar Contraseña</nz-form-label> 
+        <nz-form-control [nzSm]="14" [nzXs]="24" [nzErrorTip]="errorTpl"> 
+            <input nz-input type="password" formControlName="confirmPassword" id="confirmPassword" /> 
+            <ng-template #errorTpl let-control> 
+                <ng-container *ngIf="control.errors?.['required']"> 
+                    Por favor ingrese su contraseña de confirmación! 
+                </ng-container> 
+                <ng-container *ngIf="control.errors?.['confirm']"> 
+                    ¡Las contraseñas no coinciden! 
+                </ng-container> 
+            </ng-template> 
+        </nz-form-control> 
+    </nz-form-item> 
+
+    <nz-form-item> 
+        <nz-form-label [nzSm]="6" [nzXs]="24" nzFor="nickname" nzRequired nzTooltipTitle="¿Cómo te gustaría que te llamen?"> 
+            <span>Nickname</span> 
+        </nz-form-label> 
+        <nz-form-control [nzSm]="14" [nzXs]="24" nzErrorTip="Por favor ingrese su nickname!"> 
+            <input nz-input id="nickname" formControlName="nickname" /> 
+        </nz-form-control> 
+    </nz-form-item> 
+
+    <nz-form-item> 
+        <nz-form-label [nzSm]="6" [nzXs]="24" nzFor="phoneNumber" nzRequired>Celular</nz-form-label> 
+        <nz-form-control [nzSm]="14" [nzXs]="24" nzErrorTip="Por favor ingrese su número de teléfono!"> 
+            <input formControlName="phoneNumber" id="phoneNumber" nz-input /> 
+        </nz-form-control> 
+    </nz-form-item> 
+
+    <nz-form-item nz-row class="register-area"> 
+        <nz-form-control [nzSpan]="14" [nzOffset]="6"> 
+            <label nz-checkbox formControlName="agree"> 
+                <span> 
+                    He leído los 
+                    <a>términos y condiciones</a> 
+                </span> 
+            </label> 
+        </nz-form-control> 
+    </nz-form-item> 
+
+    <nz-form-item nz-row class="register-area"> 
+        <nz-form-control [nzSpan]="14" [nzOffset]="6"> 
+            <button (click)="onClickRegister()" nz-button nzType="primary">Register</button> 
+        </nz-form-control> 
+    </nz-form-item> 
+
+    <nz-form-item nz-row class="register-area"> 
+        <nz-form-control [nzSpan]="14" [nzOffset]="6"> 
+            <button (click)="onClickRegisterGoogle()" nz-button class="login-form-button login-form-margin" type="button">
+                <span nz-icon nzType="google" nzTheme="outline"></span>Iniciar Sesión con Google
+            </button> 
+        </nz-form-control> 
+    </nz-form-item> 
 </form>
